--- a/assets/posts.css
+++ b/assets/posts.css
@@ -2,12 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left: 6vw;
-    padding-right: 6vw;
-    padding-bottom: 12vw;
+    padding: 0 6vw 12vw 6vw;
 }
 
-#posts .cards{
+#posts .cards {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 12fr;
@@ -25,10 +23,10 @@
     grid-template-columns: 1fr 5fr 1fr;
     grid-template-rows: 1fr 5fr 0.7fr;
     grid-template-areas: 
-    "title title title"
-    "summary summary summary"
-    "time time reaction";
-
+        "title title title"
+        "summary summary summary"
+        "time time reaction"
+    ;
     padding: 5vw;
     height: 94vw;
     border-width: 0 1px 1px 0;
@@ -38,11 +36,11 @@
 }
 
 #posts .card a:hover {
-    background-color: #ddebfc;
+    background-color: #DDEBFC;
 }
 
 #posts .card a:active {
-    background-color: #fff;
+    background-color: #FFF;
 }
 
 #posts .title {
@@ -56,7 +54,7 @@
     word-break: break-all;
 }
 
-#posts .time {
+#posts time {
     font-size: 3.5vw;
     line-height: 5.5vw;
     grid-area: time;
@@ -64,41 +62,41 @@
 
 #posts .reaction {
     font-size: 3.5vw;
-    grid-area : reaction;
+    grid-area: reaction;
 }
 
 #posts .more {
     font-size: 5vw;
-    margin-top: 8vw 0;
+    margin: 8vw 0;
     padding: 3vw 9vw;
-    border: 1px solid#000;
+    border: 1px solid #000;
     border-radius: 10vw;
-    color: #fff;
-    background-color: #4593fc;
+    color: #FFF;
+    background-color: #4593FC;
 }
 
 #posts .more:hover {
     color: #000;
-    background-color: #ddebfc;
+    background-color: #DDEBFC;
 }
 
-#posts .more:active{
-    background-color: #4593fc;
+#posts .more:active {
+    background-color: #4593FC;
 }
 
 @media (min-width:600px) {
     #posts {
         padding: 0 3em 5em 3em;
     }
-
+    
     #posts .cards {
-        grid-template-columns: repeat(2,1fr);
-        grid-template-rows: repeat(8,1fr);
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(8, 1fr);
     }
 
-    #posts .card a{
+    #posts .card a {
         padding: 1em 1em 0 1em;
-        height: 20em;
+        height: 19em;
     }
 
     #posts .title {
@@ -107,6 +105,11 @@
 
     #posts .summary {
         font-size: 1em;
+    }
+
+    #posts time {
+        font-size: 0.8em;
+        line-height: 1em;
     }
 
     #posts .reaction {
@@ -118,20 +121,20 @@
         margin: 2.5em 0;
         padding: 0.5em 2em;
         border-radius: 2em;
-    }
+    }    
 }
 
-@media (min-width : 900px) {
+@media (min-width:900px) {
     #posts .cards {
-        grid-template-columns: repeat(3,1fr);
-        grid-template-columns: repeat(4,1fr);
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, 1fr);
     }
 }
 
-@media (min-width : 1024px) {
-    #posts .cards{
-        grid-template-columns: repeat(4,1fr);
-        grid-template-columns: repeat(3,1fr);
+@media (min-width:1024px) {
+    #posts .cards {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
         max-width: 1024px;
     }
 }
